--- a/less/deposites.less
+++ b/less/deposites.less
@@ -48,7 +48,15 @@
 		@media @tablet {
 			top: auto;
 			bottom: 50px;
-			width: 400px;
+			width: 350px;
+		}
+
+		@media @mobile {
+			width: 300px;
+			left: 50%;
+			right: auto;
+			bottom: 90px;
+			transform: translatex(-50%);
 		}
 	}
 
