--- a/less/header.less
+++ b/less/header.less
@@ -181,6 +181,11 @@
 			line-height: 200px;
 			text-align: center;
 		}
+
+		@media @tablet {
+			top: 0;
+			left: 200px;
+		}
 	}
 
 	&__dropdown-item {
