--- a/less/tabs.less
+++ b/less/tabs.less
@@ -61,6 +61,10 @@
 				border-bottom: 2px solid #fff;
 			}
 		}
+
+		@media @mobile {
+			margin: 0 auto;
+		}
 	}
 }
 
@@ -88,6 +92,10 @@
 			.switchers__image {
 				background-image: url('../img/sprite-hover.png');
 			}
+		}
+
+		@media @mobile {
+			width: 100%;
 		}
 	}
 
