--- a/less/fixed-bar.less
+++ b/less/fixed-bar.less
@@ -3,12 +3,10 @@
 	right: 0;
 	bottom: 0;
 	width: 100%;
-	height: 50px;
 	background-color: #313131;
 	transition: 0.3s;
 
 	@media @mobile {
-		height: 250px;
 	}
 
 	&__wrapper {
@@ -121,7 +119,12 @@
 		}
 
 		@media @mobile {
-			width: 100%;
+
+			order: 2;
+
+			&::after {
+				display: none;
+			}
 		}
 
 		p {
@@ -164,7 +167,11 @@
 		}
 
 		@media @mobile {
-			width: 100%;
+			order: 3;
+
+			&::after {
+				display: none;
+			}
 		}
 
 		p {
@@ -196,7 +203,7 @@
 		}
 
 		@media @mobile {
-			width: 100%;
+			order: 4;
 		}
 
 		p {
@@ -207,28 +214,16 @@
 		}
 	}
 
-	.fixed-bar__hider {
+	.fixed-bar__hider,
+	.fixed-bar__top-games-button,
+	.search,
+	.fixed-bar__chat,
+	.fixed-bar__language {
 		display: block;
 	}
 
 	.fixed-bar__shower {
 		display: none;
-	}
-
-	.fixed-bar__top-games-button {
-		display: block;
-	}
-
-	.search {
-		display: block;
-	}
-
-	.fixed-bar__chat {
-		display: block;
-	}
-
-	.fixed-bar__language {
-		display: block;
 	}
 }
 
@@ -265,28 +260,32 @@
 		}
 	}
 
-	.fixed-bar__hider {
+	@media @mobile {
+		
+
+		&:hover {
+			width: 52px;
+
+			.fixed-bar__shower {
+				width: 52px;
+
+				p {
+					display: none;
+				}
+			}
+		}
+	}
+
+	.fixed-bar__hider,
+	.fixed-bar__top-games-button,
+	.search,
+	.fixed-bar__chat,
+	.fixed-bar__language {
 		display: none;
 	}
 
 	.fixed-bar__shower {
 		display: block;
-	}
-
-	.fixed-bar__top-games-button {
-		display: none;
-	}
-
-	.search {
-		display: none;
-	}
-
-	.fixed-bar__chat {
-		display: none;
-	}
-
-	.fixed-bar__language {
-		display: none;
 	}
 }
 
@@ -295,9 +294,10 @@
 	margin-left: 1px;
 	flex-grow: 1;
 
-		@media @mobile {
-			width: 100%;
-		}
+	@media @mobile {
+		width: 100%;
+		order: 1;
+	}
 
 	&__field {
 		height: 50px;
@@ -318,6 +318,15 @@
 
 		&:focus {
 			background-color: #414141;
+		}
+
+		@media @mobile {
+			padding-left: 0;
+			text-align: center;
+
+			&::placeholder {
+			text-align: center;
+		}
 		}
 	}
 }
