--- a/less/blog.less
+++ b/less/blog.less
@@ -21,11 +21,22 @@
 	}
 
 	&__header {
+		position: relative;
 		margin: 0 auto;
 		margin-bottom: 35px;
 		padding-top: 60px;
 		font-family: SFUIHeavy;
 		font-size: 30px;
+
+		&::after {
+			content: '';
+			position: absolute;
+			left: ~"calc(50% - 41px)";
+			bottom: -10px;
+			width: 82px;
+			height: 3px;
+			background-color: #fe353d;
+		}
 	}
 
 	&__text-wrapper {
@@ -52,10 +63,8 @@
 
 .news {
 	position: relative;
-	width: 385px;
-	height: 285px;
+	max-width: 385px;
 	margin-bottom: 20px;
-	background-image: url('../img/news-photo.jpg');
 	background-size: cover;
 
 	@media @tablet {
@@ -63,13 +72,19 @@
 	}
 
 	@media @mobile {
+		max-width: none;
+		width: 100%;
+	}
+
+	&__photo {
 		width: 100%;
 	}
 
 	&__header-wrapper {
-		position: relative;
+		position: absolute;
+		top: 0;
 		width: 100%;
-		height: 235px;
+		height: ~"calc(100% - 50px)";
 	}
 
 	&__header {
@@ -80,11 +95,13 @@
 		font-size: 18px;
 		line-height: 31px;
 		text-transform: uppercase;
+		text-align: center;
 	}
 
 	&__button {
 		position: absolute;
 		right: 0;
+		bottom: 3px;
 		height: 50px;
 		padding-left: 20px;
 		padding-right: 20px;
@@ -134,7 +151,6 @@
 
 	&__wrapper {
 		width: 1200px;
-		height: 285px;
 		margin: 0 auto;
 		margin-bottom: 20px;
 
@@ -150,9 +166,10 @@
 	&__slide {
 		position: relative;
 		width: 100%;
-		height: 285px !important;
-		background-image: url('../img/slide-image.png');
-		background-position: center;
+	}
+
+	&__image {
+		width: 100%;
 	}
 
 	&__text-wrapper {
@@ -167,12 +184,22 @@
 		font-family: SFUIHeavy;
 		font-size: 40px;
 		text-transform: uppercase;
+
+		@media @mobile {
+			margin-bottom: 10px;
+			font-size: 20px;
+		}
 	}
 
 	&__text {
 		display: block;
 		margin-bottom: 40px;
 		font-size: 20px;
+
+		@media @mobile {
+			margin-bottom: 15px;
+			font-size: 16px;
+		}
 	}
 
 	&__button {
@@ -184,6 +211,10 @@
 
 		&:hover {
 			background-color: #e3363d;
+		}
+
+		@media @mobile {
+			padding: 5px 10px;
 		}
 	}
 }
