--- a/less/fixed-bar.less
+++ b/less/fixed-bar.less
@@ -1,13 +1,12 @@
 .fixed-bar {
 	position: fixed;
+	z-index: 20;
 	right: 0;
 	bottom: 0;
 	width: 100%;
 	background-color: #313131;
 	transition: 0.3s;
-
-	@media @mobile {
-	}
+	opacity: 0.9;
 
 	&__wrapper {
 		display: flex;
@@ -26,6 +25,7 @@
 		padding: 10px 0;
 		cursor: pointer;
 		transition: 0.1s;
+		opacity: 0.9;
 
 		&::before {
 			content: '';
@@ -325,8 +325,8 @@
 			text-align: center;
 
 			&::placeholder {
-			text-align: center;
-		}
+				text-align: center;
+			}
 		}
 	}
 }
