--- a/less/style.less
+++ b/less/style.less
@@ -14,3 +14,7 @@
 @import "fixed-bar.less";
 @import "blog.less";
 @import "entry.less";
+@import "partner.less";
+@import "advantages.less";
+@import "incomes.less";
+@import "prize.less";
