--- a/less/prize.less
+++ b/less/prize.less
@@ -13,7 +13,15 @@
 		position: relative;
 		width: 1200px;
 		margin: 0 auto;
-		text-align: center;s
+		text-align: center;
+
+		@media @tablet {
+			width: 768px;
+		}
+
+		@media @mobile {
+			.mobile-wrap;
+		}
 	}
 
 	&__header {
@@ -33,6 +41,10 @@
 		color: #000;
 		text-transform: uppercase;
 		font-family: SFUIHeavy;
+
+		@media @mobile {
+			font-size: 40px;
+		}
 	}
 
 	&__text {
