--- a/less/prize.less
+++ b/less/prize.less
@@ -28,7 +28,7 @@
 		margin-top: 25px;
 		margin-bottom: 45px;
 		font-size: 35px;
-		text-align: center;
+		text-align: centerf;
 	}
 
 	&__back-text {
