--- a/less/slider.less
+++ b/less/slider.less
@@ -28,17 +28,16 @@
 
 	&__text {
 		position: absolute;
-		top: 50%;
+		bottom: 50%;
 		left: 50%;
-		width: 500px;
-		transform: translatey(-50%);
+		transform: translatey(150%);
 
 		@media @tablet {
 			width: 300px;
 		}
 
 		@media @mobile {
-			width: ~"calc(50% - 20px)";
+		transform: translatey(100%);			
 		}
 	}
 
