--- a/css/style.css
+++ b/css/style.css
@@ -1732,6 +1732,7 @@ form * {
     width: 100%;
     padding-right: 10px;
     padding-left: 10px;
+    padding: 60px 0;
   }
   .footer__wrapper {
     width: 100%;
